# chateau-e2e-tests

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: continuous-integration.yaml
tests/: conftest.py  helpers.py  test_authentication.py  test_chateau.py  test_chateau_e2e_tests.py  test_homepage.py  test_organisation_settings.py  test_payments.py  test_search.py
