[tool.poetry]
name = "chateau-e2e-tests"
version = "0.1.0"
description = "End to end tests for Château"
authors = ["Vikash Tank <vikashtank@hotmail.co.uk>", "Thomas Leese <thomas@leese.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
