[tool.poetry]
name = "chateau-e2e-tests"
version = "0.1.0"
description = "End to end tests for Château"
authors = ["Vikash Tank <vikashtank@hotmail.co.uk>", "Thomas Leese <thomas@leese.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.0"
pytest-selenium = "^2.0"

[tool.poetry.dev-dependencies]
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
sensitive_url = "chateauapp\\.co"
